--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: ruby
-before_install:
-  - gem update --system
-  - gem update bundler
+sudo: false
 rvm:
   - 1.9.3
   - 2.0.0
@@ -11,4 +9,5 @@ rvm:
   - 2.2.1
   - 2.2.2
   - 2.2.3
+  - 2.3.0
   - rbx-2
