--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: ruby
 sudo: false
 rvm:
-  - 2.0.0
-  - 2.1.0
-  - 2.1.1
-  - 2.2.0
-  - 2.2.1
-  - 2.2.2
-  - 2.2.3
-  - 2.3.0
-  - 2.4.0
+  - 2.0.0-p648
+  - 2.1.10
+  - 2.2.8
+  - 2.3.5
+  - 2.4.2
+before_install:
+  - gem update bundler
+  - gem update --system
